@@ -287,6 +287,7 @@ wxOSX:
 - Fix background colour of shaped windows, e.g. wxRichToolTip (#23296).
 - Fix memory leak in wxFileDialog using custom controls (#23304).
 - Restore setting C-level locale when using wxLocale (#23557).
+- Check column for wxEVT_DATAVIEW_ITEM_ACTIVATED (Hartwig Wiesmann, #23636).
 - Recognize macOS 14 Sonoma in wxGetOsDescription() (Tobias Taschner, #23615).
 
 wxUniv:
